# 2018.1

./: CMakeLists.txt  DESCRIPTION.md  README.md
00.Base/: base_macro.h
01.ConsoleGui/: CMakeLists.txt  console_gui.c  console_gui.h  console_gui_curses.c  console_gui_tests.cpp  console_gui_windows.c
02.Examples/: CMakeLists.txt  console_gui_show.c  recv_network_command.c  send_network_command.c
03.Network/: CMakeLists.txt  network.c  network.h  network_common.h  network_tests.cpp  protocol.c  protocol.h
